--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
         <div class="trunk"></div>
     </div>
 </body>
+<footer>
+    <p>&copy; 2024 Marc Anthony Zapata. All rights reserved.</p>
+</footer>
 
 </html>
