--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
         <div class="star">★</div>
         <div class="grade">1.00</div>
         <div class="layer layer1">
-            <div class="ball red 1"></div>
-            <div class="ball green 2"></div>
-            <div class="ball blue 3"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
+            <div class="ball blue"></div>
         </div>
         <div class="layer layer2">
-            <div class="ball red 4"></div>
-            <div class="ball green 5"></div>
-            <div class="ball blue 6"></div>
-            <div class="ball red 7"></div>
-            <div class="ball blue 8"></div>
-            <div class="ball green 9"></div>
-            <div class="ball red 10"></div>
-            <div class="ball green 11"></div>
-            <div class="ball blue 12"></div>
-            <div class="ball red 13"></div>
-            <div class="ball blue 14"></div>
-            <div class="ball green 15"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
+            <div class="ball blue"></div>
+            <div class="ball red"></div>
+            <div class="ball blue"></div>
+            <div class="ball green"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
+            <div class="ball blue"></div>
+            <div class="ball red"></div>
+            <div class="ball blue"></div>
+            <div class="ball green"></div>
         </div>
         <div class="layer layer3">
-            <div class="ball red 16"></div>
-            <div class="ball blue 17"></div>
-            <div class="ball blue 18"></div>
-            <div class="ball red 19"></div>
-            <div class="ball green 20"></div>
-            <div class="ball green 21"></div>
-            <div class="ball blue 22"></div>
-            <div class="ball blue 23"></div>
-            <div class="ball red 24"></div>
-            <div class="ball green 25"></div>
-            <div class="ball green 26"></div>
-            <div class="ball blue 27"></div>
-            <div class="ball red 28"></div>
-            <div class="ball red 29"></div>
-            <div class="ball green 30"></div>
+            <div class="ball red"></div>
+            <div class="ball blue"></div>
+            <div class="ball blue"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
+            <div class="ball green"></div>
+            <div class="ball blue"></div>
+            <div class="ball blue"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
+            <div class="ball green"></div>
+            <div class="ball blue"></div>
+            <div class="ball red"></div>
+            <div class="ball red"></div>
+            <div class="ball green"></div>
         </div>
         <div class="trunk"></div>
     </div>
