--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
         <div class="trunk"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 <footer>
     <p>&copy; 2024 Marc Anthony Zapata. All rights reserved.</p>
